# cpp-hello-world

./: .gitignore  CMakeLists.txt  README.md  problem_description.md  problem_description.txt
src/: helloworld.cpp  helloworld.hpp  main.cpp
